[package]
name = "teamwork-cli"
version = "0.1.0"
authors = ["Quentin PROUST <quentin.proust@serli.com>"]
edition = "2018"

[dependencies]
structopt = "0.2.10"
reqwest = "0.9.12"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
dirs = "1.0.5"
prettytable-rs = "^0.8"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.4.0"

# maybe useful to show progress : https://docs.rs/indicatif/0.11.0/indicatif/
